Revision history for OpenTelemetry-SDK

{{$NEXT}}

0.015     2023-11-17 00:00:04+00:00 Europe/London

    * Fix link to issues in meta

0.014     2023-11-09 00:05:28+00:00 Europe/London

    * Handle more error classes in span's 'record_exception'
    * Add OpenTelemetry::Exporter::OTLP as a recommended distribution

0.013     2023-11-07 20:27:16+00:00 Europe/London

    * Document remaining OTLP exporter environment variables

0.012     2023-11-05 18:33:22+00:00 Europe/London

    * Document environment variables for OTLP exporter

0.011     2023-11-01 23:20:41+00:00 Europe/London

    * Minor cosmetic fixes to documentation to solve some indexing
      problems on CPAN

0.010     2023-11-01 00:00:16+00:00 Europe/London

        First version.